Update Aurora Serverless Spring REST app for Aurora Serverless v2 (#6012)
* Remove extraneous space in name of top-level app directory for RDS

* Fix typo, paremeters -> parameters

* Clarify how to create the Work table for either MySQL or PostgreSQL

Make the description of the columns engine-agnostic.

Show the actual CREATE TABLE statements for each engine.
Only the final ARCHIVE column needs a different type declaration.

* Update link to docs for creating an Aurora Serverless cluster

The modern way is to use Serverless v2.

When combined with usage of Data API, that makes PostgreSQL the safer choice
of database engine. (As of January 2024, the Data API with Aurora Serverless v2
supports PostgreSQL but not MySQL.)

* Add dependency for Postgres driver

This is only in the README at the moment, not the real POM file.

* Add same dependency for PostgreSQL driver to the real POM file

I believe it's OK to have both dependencies even though only one
database driver would be used for any particular instantiation
of the app.

I specified the latest version (as of January 2024) of the Postgres
driver from the Maven repository: https://mvnrepository.com/artifact/org.postgresql/postgresql

---------

Co-authored-by: David Souther <davidsouther+github@gmail.com>

--- a/javav2/usecases/Creating_Spring_RDS_Rest/pom.xml
+++ b/javav2/usecases/Creating_Spring_RDS_Rest/pom.xml
@@ -12,7 +12,7 @@
         <version>2.0.4.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
-  <properties>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
         <maven.compiler.target>17</maven.compiler.target>
@@ -85,6 +85,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.1</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.jexcelapi</groupId>
