--- a/rustv1/examples/cloudwatchlogs/Cargo.toml
+++ b/rustv1/examples/cloudwatchlogs/Cargo.toml
@@ -13,11 +13,18 @@ edition = "2021"
 [dependencies]
 aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
 aws-sdk-cloudwatchlogs = { version = "1.3.0" }
+aws-smithy-runtime-api = "1.1.4"
 aws-types = { version = "1.0.1" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 chrono = "0.4.32"
-aws-smithy-runtime-api = "1.1.4"
 tracing = "0.1.40"
 async-recursion = "1.0.5"
+
+
+[patch.crates-io.aws-smithy-runtime]
+path="../../../../smithy-rs/rust-runtime/aws-smithy-runtime"
+
+[patch.crates-io.aws-smithy-runtime-api]
+path="../../../../smithy-rs/rust-runtime/aws-smithy-runtime-api"
