modified the app auto scaling yaml file

--- a/.doc_gen/metadata/application-auto-scaling_metadata.yaml
+++ b/.doc_gen/metadata/application-auto-scaling_metadata.yaml
@@ -2,7 +2,7 @@
 application-autoscaling_RegisterScalableTarget:
   title: Registers a resource to scale using an &APP-ASlong; SDK
   title_abbrev: Registers a resource
-  synopsis: registers a &APP-AS; resource.
+  synopsis: registers an &APP-AS; resource.
   category:
   languages:
     Java:
@@ -14,11 +14,11 @@ application-autoscaling_RegisterScalableTarget:
               snippet_tags:
                 - appautoscale.java2.enable.main
   services:
-    auto-scaling: {RegisterScalableTarget}
+    application-autoscaling: {RegisterScalableTarget}
 application-autoscaling_DeleteScalingPolicy:
   title: Disables a resource that is scaled using an &APP-ASlong; SDK
   title_abbrev: Disables a  resource
-  synopsis: disables a &APP-AS; resource.
+  synopsis: disables an &APP-AS; resource.
   category:
   languages:
     Java:
@@ -30,7 +30,7 @@ application-autoscaling_DeleteScalingPolicy:
               snippet_tags:
                 - appautoscale.java2.disable.main
   services:
-    auto-scaling: {DeleteScalingPolicy}   
+    application-autoscaling: {DeleteScalingPolicy}   
 application-autoscaling_DescribeScalingPolicies:
   title: Describe &APP-AS; scaling policies using an &AWS; SDK
   title_abbrev: Describes scaling policies
