[Tools] Add service prefix to bundled examples to avoid naming collisions (#6026)
* Add service prefix to bundled examples to avoid naming collisions and add full list of services back to bedrock scenario.
* Fix broken links in scenario block.

---------

Co-authored-by: David Souther <davidsouther+github@gmail.com>

--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -792,3 +792,7 @@ cross_ServerlessPromptChaining:
   service_main: bedrock
   services:
     bedrock:
+    bedrock-runtime:
+    bedrock-agent:
+    bedrock-agent-runtime:
+    sfn:
