--- a/.doc_gen/metadata/iot_metadata.yaml
+++ b/.doc_gen/metadata/iot_metadata.yaml
@@ -56,6 +56,22 @@ iot_ListThings:
                 - iot.rust.list-things
   services:
     iot: {ListThings}
+iot_DeleteRule:
+  title: Delete an &IoT; rule using an &AWS; SDK
+  title_abbrev: Delete a rule
+  synopsis: delete an &IoT; rule.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.delete.thing.main
+  services:
+    iot: {DeleteThing} 
 iot_CreateRule:
   title: Create an &IoT; rule using an &AWS; SDK
   title_abbrev: Create a rule
