Adds a name parameter (or alters an existing one) to standardize and clarify status check names on GitHub.

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -15,7 +15,7 @@ permissions:
   # pull-requests: read
 jobs:
   golangci:
-    name: lint
+    name: Lint GoLang
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v3
