--- a/.github/workflows/dotnet-check.yml
+++ b/.github/workflows/dotnet-check.yml
@@ -13,6 +13,7 @@ permissions:
   contents: read
 jobs:
   dotnetcheck:
+    name: Lint DotNet
     runs-on: ubuntu-latest
     steps:
       - name: Setup .NET
