--- a/.github/workflows/label-auditor.yml
+++ b/.github/workflows/label-auditor.yml
@@ -9,6 +9,7 @@ on:
       - closed
 jobs:
   label-linter:
+    name: Audit Labels
     permissions:
       contents: read
       pull-requests: write
