--- a/.github/workflows/writeme.yml
+++ b/.github/workflows/writeme.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    name: Validate WRITEMEs
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
