--- a/rustv1/examples/cloudwatchlogs/Cargo.toml
+++ b/rustv1/examples/cloudwatchlogs/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 
 [dependencies]
 aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
-aws-sdk-cloudwatchlogs = { version = "1.3.0" }
+aws-sdk-cloudwatchlogs = { version = "1.3.0", features = ["test-util"]}
 aws-types = { version = "1.0.1" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
@@ -22,3 +22,7 @@ tracing = "0.1.40"
 async-recursion = "1.0.5"
 
 sdk-examples-test-utils = { path = "../../test-utils" }
+
+[dev-dependencies]
+aws-smithy-mocks-experimental = "0.1.0"
+# aws-smithy-runtime = { version="1", features = ["test-util"] }
