add codepipeline files

--- a/kotlin/services/codepipeline/src/test/resources/config.properties
+++ b/kotlin/services/codepipeline/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-roleArn = arn:aws:iam::814548047983:role/service-role/AWSCodePipelineServiceRole-us-east-1-MyFirstPipeline
-name = MyPipeline108
-s3Bucket = codepipescott
-s3OuputBucket = bucketmay995 
+roleArn = <enter value>
+name = <enter value>
+s3Bucket = <enter value>
+s3OuputBucket = <enter value>
