--- a/.doc_gen/metadata/polly_metadata.yaml
+++ b/.doc_gen/metadata/polly_metadata.yaml
@@ -40,6 +40,14 @@ polly_DescribeVoices:
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.DescribeVoices
+    Ruby:
+      versions:
+        - sdk_version: 3
+          github: ruby/example_code/polly
+          excerpts:
+            - description:
+              snippet_tags:
+                - polly.ruby.describeVoices
   services:
     polly: {DescribeVoices}
 polly_GetLexicon:
@@ -110,6 +118,14 @@ polly_ListLexicons:
             - description:
               snippet_tags:
                 - polly.rust.list-lexicons
+    Ruby:
+      versions:
+        - sdk_version: 3
+          github: ruby/example_code/polly
+          excerpts:
+            - description:
+              snippet_tags:
+                - polly.ruby.listLexicons
   services:
     polly: {ListLexicons}
 polly_PutLexicon:
@@ -183,6 +199,14 @@ polly_SynthesizeSpeech:
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.Synthesize
+    Ruby:
+      versions:
+        - sdk_version: 3
+          github: ruby/example_code/polly
+          excerpts:
+            - description:
+              snippet_tags:
+                - polly.ruby.synthesizeSpeech
     Rust:
       versions:
         - sdk_version: 1
