--- a/javav2/example_code/iot/src/main/resources/config.properties
+++ b/javav2/example_code/iot/src/main/resources/config.properties
@@ -1,5 +1,2 @@
-thingName = foo202
-roleARN = arn:aws:iam::814548047983:role/AssumeRoleSNS
-ruleName = YourRuleName31
-snsAction = "arn:aws:sns:us-east-1:814548047983:scott1111"
-queryString = thingName:foo
+roleARN = <Enter Value>
+snsAction = <Enter Value>
