--- a/.doc_gen/metadata/iot_metadata.yaml
+++ b/.doc_gen/metadata/iot_metadata.yaml
@@ -1,10 +1,35 @@
 # zexi 0.4.0
+iot_Hello:
+  title: Hello &IoT;
+  title_abbrev: Hello &IoT;
+  synopsis: get started using &IoT;.
+  category: Hello
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.hello_iot.main
+  services:
+    iot: {listThings}
 iot_DescribeEndpoint:
   title: Get information about an endpoint using an &AWS; SDK
   title_abbrev: Get endpoint information
   synopsis: get &IoT; endpoint information.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.describe.endpoint.main
     Rust:
       versions:
         - sdk_version: 1
@@ -31,3 +56,164 @@ iot_ListThings:
                 - iot.rust.list-things
   services:
     iot: {ListThings}
+iot_ListThings:
+  title: List your &IoT; certificates using an &AWS; SDK
+  title_abbrev: List your certificates
+  synopsis: list your &IoT; certificates.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.list.certs.main
+  services:
+    iot: {ListCertificates}    
+iot_CreateCertificate:
+  title:  Create an &IoT; certificate index using an &AWS; SDK
+  title_abbrev: Create a certificate
+  synopsis: create a &IoT; certificate.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.create.cert.main
+  services:
+    iot: {CreateKeysAndCertificate} 
+iot_DeleteCertificate:
+  title:  Delete an &IoT; certificate index using an &AWS; SDK
+  title_abbrev: Delete a certificate
+  synopsis: delete an &IoT; certificate.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.delete.cert.main
+  services:
+    iot: {DeleteCertificate}     
+iot_SearchIndex:
+  title:  Query the &IoT; search index using an &AWS; SDK
+  title_abbrev: Query the search index
+  synopsis: query the &IoT; search index.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.search.thing.main
+  services:
+    iot: {SearchIndex} 
+iot_DeleteThing:
+  title: Delete an &IoT; thing using an &AWS; SDK
+  title_abbrev: Delete a thing
+  synopsis: delete an &IoT; thing.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.delete.thing.main
+  services:
+    iot: {DeleteThing} 
+iot_CreateRule:
+  title: Create an &IoT; rule using an &AWS; SDK
+  title_abbrev: Create a rule
+  synopsis: create an &IoT; rule.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.create.thing.main
+  services:
+    iot: {CreateTopicRule}   
+iot_CreateThings:
+  title: Create &IoT; things using an &AWS; SDK
+  title_abbrev: Create a thing
+  synopsis: create an &IoT; thing.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.create.thing.main
+  services:
+    iot: {CreateThing}   
+iot_GetShawdow:
+  title: Gets the shadow for the specified thing using an &AWS; SDK
+  title_abbrev: Gets the shadow
+  synopsis: gets the shadow for an &IoT; thing.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.get.shadow.writer.main
+  services:
+    iot: {getThingShadow}       
+iot_UpdateShawdow:
+  title: Update the shadow for the specified thing using an &AWS; SDK
+  title_abbrev: Update the shadow
+  synopsis: update the shadow for an &IoT; thing.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.shadow.writer.main
+  services:
+    iot: {updateThingShadow}       
+iot_Scenario:
+  title: Perform &IoT; device management use cases using &IoT; SDK
+  title_abbrev: Performs device management use cases
+  synopsis: perform &IoT; device management use cases using &IoT; SDK
+  category: Scenarios
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.scenario.main
+  services:
+    iot: {}
