--- a/.doc_gen/metadata/bedrock_metadata.yaml
+++ b/.doc_gen/metadata/bedrock_metadata.yaml
@@ -56,6 +56,14 @@ bedrock_GetFoundationModel:
             - description: Get details about a foundation model.
               snippet_files:
                 - javascriptv3/example_code/bedrock/actions/get-foundation-model.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrock
+          excerpts:
+            - description: Get details about a foundation model.
+              snippet_tags:
+                - python.example_code.bedrock.GetFoundationModel
   services:
     bedrock: {GetFoundationModel}
 
